--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <button onclick="buildBuilding()">Gebäude bauen</button>
             <button onclick="upgradeBuilding()">Gebäude verbessern</button>
         </div>
+        <p id="logger">0</p>
         <div id="challenges">
             <h3>Tägliche Herausforderungen</h3>
             <ul id="challengeList"></ul>
