--- a/index.html
+++ b/index.html
@@ -1,35 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-    <title>3D Tycoon</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://threejs.org/build/three.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/cannon-es"></script>
-    <script src="https://unpkg.com/three@0.126.1/examples/js/loaders/GLTFLoader.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tycoon Game</title>
+    <style>
+        body { margin: 0; overflow: hidden; font-family: Arial, sans-serif; }
+        #economyUI {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
-    <div id="ui">
-        <div id="resources">
-            Geld: <span id="money">1000</span>
-            <br>
-            Materialien: <span id="materials">500</span>
-        </div>
-        <div id="actions">
-            <button onclick="buildBuilding()">Gebäude bauen</button>
-            <button onclick="upgradeBuilding()">Gebäude verbessern</button>
-        </div>
-        <p id="logger">0</p>
-        <div id="challenges">
-            <h3>Tägliche Herausforderungen</h3>
-            <ul id="challengeList"></ul>
-        </div>
-        <div id="characterCustomization">
-            <h3>Charakteranpassung</h3>
-            <label for="colorPicker">Farbe:</label>
-            <input type="color" id="colorPicker" value="#ff0000">
-        </div>
+    <div id="economyUI">
+        <span id="moneyDisplay">Geld: 1000€</span>
     </div>
-    <script src="script.js"></script>
+    <script type="module">
+        import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.module.js';
+
+        // Szene erstellen
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+        // Licht hinzufügen
+        const light = new THREE.AmbientLight(0xffffff, 0.5);
+        scene.add(light);
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+        directionalLight.position.set(5, 10, 7.5);
+        scene.add(directionalLight);
+
+        // Gebäude (Würfel) hinzufügen
+        const geometry = new THREE.BoxGeometry(2, 2, 2);
+        const material = new THREE.MeshStandardMaterial({ color: 0x00ff00 });
+        const building = new THREE.Mesh(geometry, material);
+        scene.add(building);
+
+        // Kamera-Position
+        camera.position.z = 5;
+
+        // Wirtschaftssystem
+        let money = 1000;
+        let income = 10;
+
+        function updateEconomy() {
+            money += income;
+            document.getElementById('moneyDisplay').innerText = `Geld: ${money}€`;
+        }
+        setInterval(updateEconomy, 1000);
+
+        // Animationsschleife
+        function animate() {
+            requestAnimationFrame(animate);
+            building.rotation.y += 0.01;
+            renderer.render(scene, camera);
+        }
+        animate();
+
+        // Fenstergröße anpassen
+        window.addEventListener('resize', () => {
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+        });
+    </script>
 </body>
 </html>
