--- a/index.html
+++ b/index.html
@@ -16,11 +16,29 @@
             font-size: 16px;
             border-radius: 5px;
         }
+        #controls {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+        button {
+            margin: 5px;
+            padding: 10px;
+            font-size: 16px;
+        }
     </style>
 </head>
 <body>
     <div id="economyUI">
         <span id="moneyDisplay">Geld: 1000€</span>
+    </div>
+    <div id="controls">
+        <button onclick="buyBuilding()">Gebäude kaufen (-200€)</button>
     </div>
     <script type="module">
         import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.module.js';
@@ -28,7 +46,7 @@
         // Szene erstellen
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer();
+        const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
@@ -39,14 +57,22 @@
         directionalLight.position.set(5, 10, 7.5);
         scene.add(directionalLight);
 
-        // Gebäude (Würfel) hinzufügen
-        const geometry = new THREE.BoxGeometry(2, 2, 2);
-        const material = new THREE.MeshStandardMaterial({ color: 0x00ff00 });
-        const building = new THREE.Mesh(geometry, material);
-        scene.add(building);
+        // Gebäude (Hochhaus) hinzufügen
+        const buildings = [];
+        function addBuilding() {
+            const geometry = new THREE.BoxGeometry(2, Math.random() * 5 + 3, 2);
+            const material = new THREE.MeshStandardMaterial({ color: Math.random() * 0xffffff });
+            const building = new THREE.Mesh(geometry, material);
+            building.position.x = Math.random() * 20 - 10;
+            building.position.z = Math.random() * 20 - 10;
+            building.position.y = geometry.parameters.height / 2;
+            scene.add(building);
+            buildings.push(building);
+        }
 
         // Kamera-Position
-        camera.position.z = 5;
+        camera.position.set(0, 10, 15);
+        camera.lookAt(0, 0, 0);
 
         // Wirtschaftssystem
         let money = 1000;
@@ -58,10 +84,22 @@
         }
         setInterval(updateEconomy, 1000);
 
+        // Gebäude kaufen
+        window.buyBuilding = function() {
+            if (money >= 200) {
+                money -= 200;
+                income += 5;
+                addBuilding();
+                document.getElementById('moneyDisplay').innerText = `Geld: ${money}€`;
+            } else {
+                alert("Nicht genug Geld!");
+            }
+        }
+
         // Animationsschleife
         function animate() {
             requestAnimationFrame(animate);
-            building.rotation.y += 0.01;
+            buildings.forEach(b => b.rotation.y += 0.01);
             renderer.render(scene, camera);
         }
         animate();
